--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ wheels/
 MANIFEST
 
 # PyInstaller
+
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
@@ -102,3 +103,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+.idea/
